force-app/main/default/objects/KimbleOne__ShareReason__c/KimbleOne__ShareReason__c.object-meta.xml
<CustomObject>
    <label>Share Reason</label>
    <nameField>
        <label>Share Reason Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Share Reasons</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>