force-app/main/default/objects/KimbleOne__ShareReason__c/fields/KimbleOne__Code__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__Code__c</fullName>
    <label>Code</label>
    <length>5</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>