force-app/main/default/objects/KimbleOne__ShareReason__c/fields/KimbleOne__ContextObject__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__ContextObject__c</fullName>
    <label>Context Object</label>
    <length>80</length>
    <required>true</required>
    <type>Text</type>
</CustomField>