force-app/main/default/objects/KimbleOne__ShareReason__c/fields/KimbleOne__IsOwner__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__IsOwner__c</fullName>
    <defaultValue>false</defaultValue>
    <label>IsOwner</label>
    <type>Checkbox</type>
</CustomField>